# rust-fp

./: .dockerignore  .env  .gitignore  Architecture.md  Cargo.toml  Dockerfile  Roadmap.md  dev.yml  docker-compose-dev.yml  docker-compose.yml  run.sh
.sqlx/: query-008a2e68201af3851b06c78a8bc5a6b2f3a5bc9da8026fdaeede8e26ca0cfacb.json  query-02d234d129a13d365ab547af65d942d37673ed25a0281f9a46576c1c49e3a23a.json  query-054254e53a5ab443bb09e3418a40df3a5db9e81d288c1ce817d4587aed7f0be8.json  query-0bdfb7a61802189ffe73dfae168c7e5406bdecb7b774700a6d03df4dd227493a.json  query-0db57c327988e9bf78dbeb6fbd824b9bea68e8b5e5e699fa039fec82f89d4bf7.json  query-202e010011dbc2b8a2d1720efe6a110cce770bf1fdf730f1c804359bec57bb1d.json  query-21e5f2d85d81a1a0c26b02ac561bcfb3783e764c524f4e08ad99012d16dbee12.json  query-25646577f4c9e7f9342df93bda941aec71cac419125e3286ddc0617feaa2626c.json  query-2791322a151f237b9be57db842dcb943c1db847e61ca9281025f8c23524b5335.json  query-290c11738a0b95657e809b83bf3661903c9d89522dec92a0f121e4984d4bd398.json  query-292d8dc5120fb3e2b0d7aced6502d3e88ba681ceb0a7dd6aede94f8d29d0f9d1.json  query-344a3085fb286720192062649a579c47727e0f6db13d39ec7905b4c9697fec4e.json  query-36933ead8ae8d76f9ef4f9adb24ee7afb5cda86c651d935b526aa9e006f36f59.json  query-3c8d4887c0870212f9a5a8e651c0a7ab19b106e9bfb531043c0c4e539f382448.json  query-3d143fb9c86a3d2534a2a4ecc1300492bb700a8725558dab8e8880e8d2a4bea3.json  query-3f28c6bebf455b067dd12b94888617e0d4c60fdb88ed98ce0e3a107d9319d259.json  query-43ec75313d5a200fd1dff039c0fb23d78adf64472490b50c73d1fc0a9cab1581.json  query-4dd050b6f2db24f40052b1d1178a8bdec83a5a5b09ba56201cb27bed8134c62a.json  query-587a0b1c5df0f681e40c3765809ed16113193d8f257e152b440ad32b715f9bd1.json  query-59d2d32bf21f7ddb1859e6a7b13c63b01c6c04c2ee952bf2f5c0e8dbd9cb1b68.json  query-5b5272870e591c96a399663ffecae8b4317de7611d81428af05344b41ddff0e1.json  query-5d12c08596bba35771ff9c220a85dddcbcfd003fbf06213c534248d092f5d711.json  query-5f69b265b1d0733ad0e8292769036868f1c2e8bd76d3d2b60f96de370a8d3c8f.json  query-6a7e356f872258cbdc6692805520d905add62281255bce68702199484db7e18c.json  query-6e5cfe25b4f99c889faba5743e5cf7e486a89a67ba59d660a5e9fa56c5471476.json  query-6f5cc07e493a2fff5ebdc5d39b5a5d7db7cef6446cb4a6aceef23004c9f8b09d.json  query-72c77550ffd053e758b29839b3f04acc1163e4d32f987bcd5d83b4b2ea9ed64c.json  query-73a643298168c7495896be13167f9e3c63efde1884a3cad3ee241c6a0702af94.json  query-7bfddd0b8462b5e1efdd832fdecc8347eb4a94b2f41446a239a00ccf85b0a08b.json  query-800e261bfb437413016466254bca73148a990bcf9e3990a20b60064c8441c457.json  (+31 more)
aux/: frida_sample_data.sql
common/: Cargo.toml
common/src/: config.rs  lib.rs  test_helpers.rs  yaml_include.rs
ecom/: Cargo.toml  build.rs
ecom-f2/: Cargo.toml  candidate_matching.sql
ecom-f2/config/: dev.yaml  production.yaml
ecom-f2/src/: model.rs
ecom-f2/src/processible/: columns.rs  mod.rs  processible.rs  processible_serde.rs
ecom-f2/tests/: importer_tests.rs
ecom/config/: dev.yaml
ecom/src/: ecom_db_model.rs  ecom_order_storage.rs  entities.rs  expression_based_scorer.rs  import_model.rs  lib.rs  model.rs  models.rs  order_storage.rs  processible.rs  rule_based_scorer.rs  storage_model.rs
ecom/src/processible/: columns.rs  mod.rs  processible.rs  processible_serde.rs
ecom/tests/: ecom_order_storage_tests.rs  ecom_storage_tests.rs  entities_test.rs  importer_tests.rs  modular_storage_tests.rs  order_storage_tests.rs  processor_unit_tests.rs  storage_tests.rs  test_helpers.rs
ecom/tests/storage_tests/: basic_operations_tests.rs  filter_tests.rs  integrity_tests.rs  mod.rs  query_tests.rs  relationship_tests.rs  transaction_tests.rs
frida_core/: Cargo.toml
frida_core/resources/: core_schema.sql
frida_core/src/: config.rs  executable_utils.rs  importer.rs  in_memory_queue.rs  lib.rs  model.rs  processor.rs  queue.rs  queue_service.rs  scorer.rs  sqlite_storage.rs  storage.rs
frida_core/src/api/: health.rs
frida_core/src/scorers/: mod.rs  rule_based.rs
frida_core/src/test_utils/: mod.rs
frida_core/tests/: common_storage_tests.rs  queue_tests.rs
frida_ecom/: Cargo.toml  build.rs
frida_ecom/config/: dev.yaml  importer.toml  processor.toml
frida_ecom/src/: config.rs  ecom.rs  ecom_db_model.rs  ecom_import_model.rs  ecom_order_storage.rs  lib.rs  rule_based_scorer.rs  sqlite_order_storage.rs  test.rs
frida_ecom/tests/: api_tests.rs  importer_tests.rs  processor_tests.rs  storage_tests.rs
processing/: Cargo.toml
processing/src/: executable_utils.rs  importer.rs  lib.rs  model.rs  processor.rs  queue.rs  repository.rs  storage.rs  test_helpers.rs
processing/src/graphql/: accessors.rs  filters.rs  inputs.rs  mod.rs  payload.rs  types.rs
processing/src/model/: importable.rs  importable_serde.rs  mod.rs  mongo_model.rs  processible.rs  sea_orm_queue_entities.rs  sea_orm_storage_model.rs  web_transaction.rs
processing/src/scorers/: expression_based.rs  mod.rs
processing/src/storage/: common.rs  graphql_schema.rs  implementation.rs  importable.rs  mod.rs  mongo_common.rs  processible.rs  prod_common.rs  sea_orm_storage_model.rs  web.rs
processing/src/test_utils/: mod.rs
processing/src/ui_model/: filter_model.rs  mod.rs  query_builder.rs
processing/tests/: common_storage_tests.rs  mocks.rs  mod.rs  processor_integration_tests.rs  processor_test.rs  processor_unit_tests.rs  query_builder_tests.rs  storage_tests_runner.rs
processing/tests/api_tests/: label_tests.rs  label_transaction_tests.rs  mocks.rs  mod.rs  partial_success_tests.rs  validation_tests.rs
processing/tests/processor_tests/: connection_tests.rs  mocks.rs  mod.rs  processor_integration_tests.rs  unit_tests.rs  value_tests.rs
processing/tests/query_builder_tests/: advanced_queries.rs  basic_operators.rs  logical_operators.rs  mod.rs  relationship_queries.rs
processing/tests/scorers/: expression_based_scorer_tests.rs  mod.rs
processing/tests/storage_tests/: connection_tests.rs  feature_tests.rs  label_tests.rs  labeling_tests.rs  matching_tests.rs  mod.rs  score_tests.rs  setup.rs
processing/tests/test_utils/: mod.rs
(+34 files in other folders)
