[workspace]
members = [
    "common",
    "ecom",
    "processing",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nice Folks"]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid", "json"] }
sea-orm = { version = "1.1.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print", "with-chrono", "with-json", "with-uuid", "seaography"] }
seaography = {version = "~1.1.4", features = ["with-decimal", "with-chrono", "with-postgres-array"]}
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.99"
thiserror = "2.0.16"
async-trait = "0.1.89"
futures = "0.3.30"
futures-util = "0.3.30"
reqwest = { version = "0.12.23", features = ["json"] }
url = { version = "2.5.7", features = ["serde"] }
serde_yml = "0.0.12"
yaml-rust2 = "0.10.3"
regex = "1.11.2"
once_cell = "1.21.3"
dotenvy = "0.15.7"
axum = "0.8.4"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
tower-http = { version = "0.6.2", features = ["cors"] }
tower = "0.5.2"
http = "1.3.1"
evalexpr = "12.0.2"
mockall = "0.13.1"