[workspace]
members = [
    "common",
    "ecom",
    "processing",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Vladislav Raevsky"]

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid", "json"] }
sea-orm = { version = "1.1.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print", "with-chrono", "with-json", "with-uuid", "seaography"] }
seaography = {version = "~1.1.4", features = ["with-decimal", "with-chrono", "with-postgres-array"]}
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
async-trait = "0.1.89"
futures = "0.3.30"
futures-util = "0.3.30"
reqwest = { version = "0.12.24", features = ["json"] }
url = { version = "2.5.7", features = ["serde"] }
serde_yml = "0.0.12"
yaml-rust2 = "0.10.4"
regex = "1.12.2"
once_cell = "1.21.3"
dotenvy = "0.15.7"
axum = "0.8.7"
async-graphql = {version = "7.0.17", features=["chrono", "dynamic-schema", "graphiql", "playground", "log", "tracing", "tokio-sync"]}
async-graphql-axum = "7.0.17"
tower-http = { version = "0.6.2", features = ["cors"] }
tower = "0.5.2"
http = "1.3.1"
evalexpr = "13.0.0"
mockall = "0.13.1"
lazy_static = "1.5.0"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"