[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
yaml-rust2 = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[lib]
name = "common"
path = "src/lib.rs"

