[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = []
test-helpers = []
processing-mocks = ["mockall"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
yaml-rust2 = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
sea-orm = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true, optional = true }

[lib]
name = "common"
path = "src/lib.rs"

[dev-dependencies]
tokio-test = "0.4.4"
mockall = { workspace = true }

