[package]
name = "ecom-f2"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
processing = { path = "../processing" }
common = { path = "../common", features = ["test-helpers"] }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
seaography = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
serde_yml = { workspace = true }
yaml-rust2 = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
lazy_static = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
mongodb = {workspace = true}


[dev-dependencies]
common = { path = "../common" }
mockall = { workspace = true }

[build-dependencies]
fs_extra = "1.3"
common = { path = "../common" }
yaml-rust2 = { workspace = true }

[[bin]]
name = "importer"
path = "src/bin/importer.rs"

[[bin]]
name = "processor"
path = "src/bin/processor.rs"

[[bin]]
name = "backend"
path = "src/bin/backend.rs"

