[package]
name = "ecom"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
processing = { path = "../processing" }
common = { path = "../common" }
proc-macros = { path = "../proc-macros" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "json"
]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
serde_yaml = { workspace = true }
yaml-rust2 = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
actix-web.workspace = true

[build-dependencies]
fs_extra = "1.3"
common = { path = "../common" }
yaml-rust2 = { workspace = true }

[[bin]]
name = "importer"
path = "src/bin/importer.rs"

[[bin]]
name = "processor"
path = "src/bin/processor.rs"

[[bin]]
name = "backend"
path = "src/bin/backend.rs"