[package]
name = "frida_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sqlx = { workspace = true, features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
    "json",
    "macros"
]}
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
async-trait.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
tokio.workspace = true
clap.workspace = true
actix-web.workspace = true
jsonschema.workspace = true

[lib]
name = "frida_core"
path = "src/lib.rs"
