[package]
name = "frida_ecom"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
frida_core = { path = "../frida_core" }
actix-web.workspace = true
async-trait.workspace = true
chrono.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
env_logger.workspace = true
tempfile.workspace = true
tokio.workspace = true
sqlx = { workspace = true, features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
    "json",
    "macros"
]}
clap.workspace = true

[build-dependencies]
fs_extra = "1.3"
common = { path = "../common" }
yaml-rust2.workspace = true

[[bin]]
name = "importer"
path = "src/bin/importer.rs"

[[bin]]
name = "processor"
path = "src/bin/processor.rs"