[package]
name = "processing"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common", features = ["test-helpers"] }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "json"
]}
sea-orm = { workspace = true }
seaography = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
yaml-rust2 = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true, features = ["macros"] }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tower = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
jsonschema = "0.33.0"
http.workspace = true
evalexpr.workspace = true

[dev-dependencies]
common = { path = "../common", features = ["processing-mocks"] }
serial_test = "3.2.0"
http-body-util = "0.1.0"
mockall = { workspace = true }

[lib]
name = "processing"
path = "src/lib.rs"
